<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:scaleType="centerCrop"
            android:src="@drawable/panther" />

        <Button
            android:id="@+id/btn_ChooseColor"
            style="@style/TextTheme"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="Choose the color" />

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/TitleTheme"
            android:text="@string/title_panther" />

        <TextView
            android:id="@+id/textView1"
            style="@style/TextTheme"
            android:text="@string/about_panther1" />


        <TextView
            android:id="@+id/textView2"
            style="@style/TextTheme"
            android:text="@string/about_panther2" />


        <TextView
            android:id="@+id/textView3"
            style="@style/TextTheme"
            android:text="@string/about_panther3" />


        <TextView
            android:id="@+id/textView4"
            style="@style/TextTheme"
            android:text="@string/about_panther4" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                style="@style/ButtonTheme"
                android:background="@color/colorRed"
                android:text="@string/btn_panther" />

            <Button
                android:id="@+id/button2"
                style="@style/ButtonTheme"
                android:background="@color/colorGreen"
                android:text="@string/btn_leopard" />

            <Button
                android:id="@+id/button3"
                style="@style/ButtonTheme"
                android:background="@color/colorBlue"
                android:text="@string/btn_lynx" />


        </LinearLayout>

    </LinearLayout>

</ScrollView>

